# GitTextBot

./: DEPLOYMENT.md  README.md  app.py  github_service.py  pyproject.toml  rate_limiter.py  requirements.txt
attached_assets/: Pasted--File-opt-render-project-src-app-py-line-21-in-index--1743887377411.txt
deploy_package/: .gitignore  GITHUB_AUTHENTICATION.md
static/css/: style.css
static/js/: main.js
templates/: 404.html  500.html  documentation.html  index.html
